# compass

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  requirements.txt
.streamlit/: config.toml
compass/: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
compass/backend/: TESTING.md
compass/backend/src/: __init__.py
compass/backend/src/api/: routes.py
compass/backend/src/context_intent/: __init__.py  schema.py  traffic_profile.py
compass/backend/src/deployment/: __init__.py  validator.py
compass/backend/src/deployment/templates/: autoscaling.yaml.j2  kserve-inferenceservice.yaml.j2  vllm-config.yaml.j2
compass/backend/src/knowledge_base/: benchmarks.py  slo_templates.py
compass/backend/src/llm/: ollama_client.py
compass/backend/src/orchestration/: __init__.py
compass/backend/src/recommendation/: capacity_planner.py
compass/backend/src/research/: __init__.py  slo_adjuster.py
compass/config/: kind-cluster.yaml
compass/data/: demo_scenarios.json  model_catalog.json  model_hardware_benchmarks.csv  slo_templates.json
compass/data/benchmarks/hardware/: hardware_costs.csv
compass/data/benchmarks/models/: CSV_FILES_EXPLAINED.md  CSV_FILES_QUICK_REFERENCE.md  opensource_all_benchmarks.csv
compass/data/business_context/subject_specific/: SUBJECT_DATASETS_REFERENCE.md  opensource_reasoning.csv  opensource_science.csv  subject_datasets_mapping.json
compass/data/business_context/use_case/weighted_scores/: opensource_content_generation.csv  opensource_document_analysis_rag.csv  opensource_long_document_summarization.csv
compass/data/research/: slo_ranges.json  workload_patterns.json
compass/docs/: INTEGRATION_IMPROVEMENTS.md  simplified-architecture-diagram.md  traffic_and_slos.md
compass/sanity_tests/: __init__.py
compass/scripts/: kind-cluster.sh  regenerate_from_psv.py  run_ui.sh  show_latest_prompt.sh
compass/simulator/: README.md  simulator_service.py
compass/tests/: test_kubernetes_deployment.py  test_postgresql_integration.py  test_recommendation_workflow.py  test_simulator_deployment.py
compass/ui/: app.py
data/: benchmarks_estimated_performance.json  benchmarks_interpolated_v2.json  benchmarks_synthetic.json  model_catalog.json  sample_outcomes.json  (+2 more)
(+167 files in other folders)
